- Nifty objecttree improvements - and...wait for it...Annotation (ClientReflector) rebind generator! Yeeeaaasss...
git-svn-id: https://alcina.googlecode.com/svn/trunk@34 812e3da0-21a7-11df-99f8-b513f4f1e6c6

--- a/framework/gwt/src/cc/alcina/framework/gwt/public/Alcina.css
+++ b/framework/gwt/src/cc/alcina/framework/gwt/public/Alcina.css
@@ -1001,6 +1001,9 @@ input.calendarText.alcina-DateBox, div.alcina-ObjectTree  input.gwt-DateBox.alci
 	background: none;
 	margin-right:10px;
 }
+div.alcina-ObjectTree select{
+	margin-right:10px;
+}
 div.alcina-ObjectTree  input.gwt-DateBox.alcina-DateBox.dateBoxFormatError{
 	background: rgb(255, 204, 204);
 }
