--- a/framework/gwt/src/cc/alcina/framework/gwt/public/Alcina.css
+++ b/framework/gwt/src/cc/alcina/framework/gwt/public/Alcina.css
@@ -649,8 +649,10 @@ table.colour-chooser {
 }
 
 /** components used in annotation-based rendering **/ /** Chooser **/
+div.alcina-Chooser {
+	position: relative;
+}
 div.alcina-Chooser div.pop-down {
-	position: absolute;
 	border: 2px solid #CECECE;
 	padding: 2px;
 	background: white;
@@ -746,7 +748,9 @@ div.alcina-Selector a    ,div.alcina-Selector a:link,div.alcina-Selector a:visit
 	color: black;
 	text-decoration: none;
 }
-
+div.alcina-Selector a:hover{
+	background-color: #dddddd; 
+}
 div.alcina-BeanPanel div.alcina-BreadcrumbBar.font-grey {
 	color: #505050;
 	font-weight: bold
@@ -855,6 +859,7 @@ input.alcina-Filter {
 	border: 1px solid #CECECE;
 	width: 85%;
 	padding: 1px 1px 1px 15px;
+	height: 12px;
 }
 
 div.alcina-FilterHolder {
@@ -1008,6 +1013,9 @@ input.calendarText.alcina-DateBox, div.alcina-ObjectTree  input.gwt-DateBox.alci
 	background: none;
 	margin-right:10px;
 }
+td.datePickerMonth{
+	font-size: 90%;
+}
 div.alcina-ObjectTree select{
 	margin-right:10px;
 }
@@ -1060,13 +1068,13 @@ table.gwittir-BoundTable tr.header td.first {
 }
 
 table.gwittir-BoundTable tr.header td.ascending div {
-	background: transparent url(_pix/bg-ascending.gif) no-repeat scroll left
+	background: transparent url(_pix/bg-ascending.png) no-repeat scroll left
 		center;
 	padding-left: 10px;
 }
 
 table.gwittir-BoundTable tr.header td.descending div {
-	background: transparent url(_pix/bg-descending.gif) no-repeat scroll
+	background: transparent url(_pix/bg-descending.png) no-repeat scroll
 		left center;
 	padding-left: 10px;
 }
@@ -1082,7 +1090,10 @@ table.gwittir-BoundTable tr.header td {
 	vertical-align: middle;
 	border-bottom: 1px solid #CECECE;
 }
-
+table.gwittir-BoundTable tr.header td:hover {
+	background-color:#D0D0D0;
+	color: #202020;
+}
 table.gwittir-BoundTable tr.header.sort td {
 	cursor: pointer;
 }
