IE inline-block hack
git-svn-id: https://alcina.googlecode.com/svn/trunk@39 812e3da0-21a7-11df-99f8-b513f4f1e6c6

--- a/framework/gwt/src/cc/alcina/framework/gwt/public/Alcina.css
+++ b/framework/gwt/src/cc/alcina/framework/gwt/public/Alcina.css
@@ -859,7 +859,7 @@ input.alcina-Filter {
 	border: 1px solid #CECECE;
 	width: 85%;
 	padding: 1px 1px 1px 15px;
-	height: 12px;
+	height: 14px;
 }
 
 div.alcina-FilterHolder {
@@ -1182,6 +1182,8 @@ table.gwittir-BoundTable tr.header {
 {
 	display: inline-block;
 	text-align: left;
+	zoom:1;
+	display: inline\9
 }
 .inlineTabDisplay .gwt-HTML{
 	padding-right:1em;
