Job system improvements
git-svn-id: https://alcina.googlecode.com/svn/trunk@46 812e3da0-21a7-11df-99f8-b513f4f1e6c6

--- a/framework/gwt/src/cc/alcina/framework/gwt/public/Alcina.css
+++ b/framework/gwt/src/cc/alcina/framework/gwt/public/Alcina.css
@@ -1157,7 +1157,11 @@ table.gwittir-BoundTable tr.header {
 	background: white;
 	margin: 10px 10px 20px 25px;
 	padding: 10px;
-	
+}
+.alcina-ActionProgress.minimal{
+	border: none;
+	margin: 2px;
+	padding: 0px;
 }
 .alcina-ActionProgress .bar {
 	width: 200px;
