Minor table stuff
git-svn-id: https://alcina.googlecode.com/svn/trunk@60 812e3da0-21a7-11df-99f8-b513f4f1e6c6

--- a/framework/gwt/src/cc/alcina/framework/gwt/public/Alcina.css
+++ b/framework/gwt/src/cc/alcina/framework/gwt/public/Alcina.css
@@ -1094,11 +1094,9 @@ table.gwittir-BoundTable tr.header td {
 	vertical-align: middle;
 	border-bottom: 1px solid #CECECE;
 }
-table.gwittir-BoundTable tr.header td:hover {
+table.gwittir-BoundTable tr.header td.sortable:hover {
 	background-color:#D0D0D0;
 	color: #202020;
-}
-table.gwittir-BoundTable tr.header.sort td {
 	cursor: pointer;
 }
 
