Begin serious abstraction of local persistence
git-svn-id: https://alcina.googlecode.com/svn/trunk@65 812e3da0-21a7-11df-99f8-b513f4f1e6c6

--- a/framework/gwt/src/cc/alcina/framework/gwt/public/Alcina.css
+++ b/framework/gwt/src/cc/alcina/framework/gwt/public/Alcina.css
@@ -582,6 +582,9 @@ div.pad-top-0{
 .pad-lbr-15 {
 	padding: 0px 15px 15px 15px;
 }
+.pad-tb-1em {
+	padding: 1em 0 1em 0;
+}
 
 .pad-left-15 {
 	padding-left: 15px;
