- Minor xmlutils fix - Change popup error font size absolute (px), not relative
git-svn-id: https://alcina.googlecode.com/svn/trunk@107 812e3da0-21a7-11df-99f8-b513f4f1e6c6

--- a/framework/gwt/src/cc/alcina/framework/gwt/public/Alcina.css
+++ b/framework/gwt/src/cc/alcina/framework/gwt/public/Alcina.css
@@ -834,7 +834,7 @@ table.results-table {
 /****ERROR MESSAGES
 */
 .gwittir-ValidationPopup {
-	font-size: 0.9em;
+	font-size: 11px;
 	color: #F33;
 }
 
