--- a/template/client/src/cc/alcina/template/AlcinaTemplateClient.gwt.xml
+++ b/template/client/src/cc/alcina/template/AlcinaTemplateClient.gwt.xml
@@ -11,5 +11,5 @@
 	<public path="public" />
 	<super-source path="jre" />
 	<public path="client/widgets/res" />
-	<set-property name="user.agent" value="safari" />
+	<set-property name="user.agent" value="gecko1_8" />
 </module>
