Remove custom paragraph styling
git-svn-id: https://alcina.googlecode.com/svn/trunk@211 812e3da0-21a7-11df-99f8-b513f4f1e6c6

--- a/framework/gwt/src/cc/alcina/framework/gwt/public/Alcina.css
+++ b/framework/gwt/src/cc/alcina/framework/gwt/public/Alcina.css
@@ -466,7 +466,8 @@ div input.button-submit {
 .font-grey {
 	color: #717171;
 }
-
+/* don't think this is good - UA needs margin for wrapping in blockquotes etc */
+/*
 p {
 	margin: 0;
 	padding: 0 0 15px 0;
@@ -475,6 +476,7 @@ p {
 img {
 	border: 0;
 }
+*/
 
 /* Forms ######################################################### */
 form {
