More funkeh multiselector
git-svn-id: https://alcina.googlecode.com/svn/trunk@303 812e3da0-21a7-11df-99f8-b513f4f1e6c6

--- a/framework/gwt/src/cc/alcina/framework/gwt/public/Alcina.css
+++ b/framework/gwt/src/cc/alcina/framework/gwt/public/Alcina.css
@@ -784,6 +784,9 @@ table.alcina-SelectorFrame.minimal div.alcina-FilterHolder{
 	border: none;
 	padding-top:0px;
 	padding-bottom:0px;
+	background-image:url('_pix/arrow-selector-down.gif');
+	background-repeat:no-repeat;
+	background-position:right center; 
 }
 table.alcina-SelectorFrame.minimal div.alcina-Selector.available{
 	border-right:none;
