More funkeh multiselector
git-svn-id: https://alcina.googlecode.com/svn/trunk@304 812e3da0-21a7-11df-99f8-b513f4f1e6c6

--- a/framework/gwt/src/cc/alcina/framework/gwt/public/Alcina.css
+++ b/framework/gwt/src/cc/alcina/framework/gwt/public/Alcina.css
@@ -721,9 +721,7 @@ div.alcina-Selector {
 div.alcina-Selector .scroller{
 	height: 115px;	
 }
-div.alcina-Selector input.alcina-Filter[type="text"]{
-	width: 300px;
-}
+
 
 div.alcina-Selector div.alcina-FilterHolder {
 	background-color: transparent;
@@ -793,6 +791,11 @@ table.alcina-SelectorFrame.minimal div.alcina-Selector.available{
 }
 table.alcina-SelectorFrame.minimal input.alcina-Filter{
 	border: none;
+}
+table.alcina-SelectorFrame.minimal div.alcina-Selector input.alcina-Filter[type="text"]{
+	width: 300px;
+	background: none;
+	padding: 2px;
 }
 table.alcina-SelectorFrame.minimal input.alcina-Filter:focus{
 	outline-width:0;
