--- a/template/client/src/cc/alcina/template/public/AlcinaTemplateClient.html
+++ b/template/client/src/cc/alcina/template/public/AlcinaTemplateClient.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN">
 
-<html>
+<html manifest="cc.alcina.template.AlcinaTemplateClient/appcache.nocache.manifest">
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <title>AlcinaTemplate - sample application</title>
