Master page validation support
git-svn-id: https://alcina.googlecode.com/svn/trunk@416 812e3da0-21a7-11df-99f8-b513f4f1e6c6

--- a/framework/gwt/src/cc/alcina/framework/gwt/public/Alcina.css
+++ b/framework/gwt/src/cc/alcina/framework/gwt/public/Alcina.css
@@ -926,6 +926,17 @@ table.results-table {
 .login-error, .error {
 	color: #ff3333;
 }
+.combined-validation-feedback {
+	min-width:300px;
+}
+.combined-validation-feedback .caption{
+	font-weight:bold;
+	color: #444;
+	border-bottom: 1px solid #4040A0;
+	margin-left:1em;
+	margin-top:0.8em;
+	
+}
 
 
 /** Filter widget **/
