Styles for ie7/8
git-svn-id: https://alcina.googlecode.com/svn/trunk@417 812e3da0-21a7-11df-99f8-b513f4f1e6c6

--- a/framework/gwt/src/cc/alcina/framework/gwt/public/Alcina.css
+++ b/framework/gwt/src/cc/alcina/framework/gwt/public/Alcina.css
@@ -928,6 +928,7 @@ table.results-table {
 }
 .combined-validation-feedback {
 	min-width:300px;
+	width:300px;
 }
 .combined-validation-feedback .caption{
 	font-weight:bold;
