Reimplement (more sensibly) per-tree nodefactory - pass the factory in the treenode constructor
git-svn-id: https://alcina.googlecode.com/svn/trunk@423 812e3da0-21a7-11df-99f8-b513f4f1e6c6

--- a/framework/gwt/src/cc/alcina/framework/gwt/public/Alcina.css
+++ b/framework/gwt/src/cc/alcina/framework/gwt/public/Alcina.css
@@ -1358,3 +1358,6 @@ div.max .gwt-RichTextArea{
 .alcina-Selector .popupContent div.chooser-item:hover{
 	background-color:#A8D3E6;
 }
+.gwt-Tree.wrapped-tree .gwt-TreeItem{
+	white-space: normal;
+}
