- get rid of richtext focus hacks - better subclassing of committostorage - fix createaction for autosave client
git-svn-id: https://alcina.googlecode.com/svn/trunk@555 812e3da0-21a7-11df-99f8-b513f4f1e6c6

--- a/framework/gwt/src/cc/alcina/framework/gwt/client/res/Alcina.css
+++ b/framework/gwt/src/cc/alcina/framework/gwt/client/res/Alcina.css
@@ -957,7 +957,9 @@ input.alcina-Filter {
 	padding: 1px 1px 1px 15px;
 	height: 14px;
 }
-
+div.alcina-FilterHolder.inlineFilter div.alcina-FilterHolder-pad{
+	display:inline;background:none; border:none;
+}
 div.alcina-FilterHolder {
 	background-color: #DFDFDF;
 	padding: 1px 5px 1px 2px;
