-- introspector filter -- minor fixes (wizard, glassidalog)
git-svn-id: https://alcina.googlecode.com/svn/trunk@575 812e3da0-21a7-11df-99f8-b513f4f1e6c6

--- a/framework/gwt/src/cc/alcina/framework/gwt/client/res/Alcina.css
+++ b/framework/gwt/src/cc/alcina/framework/gwt/client/res/Alcina.css
@@ -996,6 +996,7 @@ div.alcina-Wizard div.wizard-toolbar {
 	padding-top: 20px;
 	padding-bottom: 10px;
 	background-color: white;
+	border-bottom:none;
 }
 
 div.alcina-Wizard .h2 {
