- abortive attempt at true tree lazy nodes (for filtering, it quickly becomes too trixy - without a real view/model impl) - squelching of transform errors on client sync
git-svn-id: https://alcina.googlecode.com/svn/trunk@582 812e3da0-21a7-11df-99f8-b513f4f1e6c6

--- a/framework/gwt/src/cc/alcina/framework/gwt/client/res/Alcina.css
+++ b/framework/gwt/src/cc/alcina/framework/gwt/client/res/Alcina.css
@@ -1318,7 +1318,9 @@ table.gwittir-BoundTable.editable tr.odd td{
 .alcina-expandableLabel a, .alcina-expandableLabel a:link,.alcina-expandableLabel a:visited,.alcina-expandableLabel a:active{
 	text-decoration: none;
 }
-
+.alcina-expandableLabel{
+	white-space:normal;
+}
 /** Rich text **/
 .alcina-richTextToolbarBkg{
  background: #e3e8f3 url(images/hborder.png) repeat-x 0px -2003px;
