* Support for annotated css, help info in bean viewer * Handle 'relative popup inside relative popup' clipping
git-svn-id: https://alcina.googlecode.com/svn/trunk@687 812e3da0-21a7-11df-99f8-b513f4f1e6c6

--- a/framework/gwt/src/cc/alcina/framework/gwt/client/res/Alcina.css
+++ b/framework/gwt/src/cc/alcina/framework/gwt/client/res/Alcina.css
@@ -822,6 +822,12 @@ table.alcina-SelectorFrame.minimal div.alcina-Selector{
 	white-space:nowrap;
 	 
 }
+table.alcina-SelectorFrame.minimal .selectx .text {
+	padding-right: 6px;
+	display: inline-block;
+	max-width: 450px;
+	overflow-x: hidden;
+}
 table.alcina-SelectorFrame.minimal .caption-hint{
 	font-style:italic;
 }
