* More work on modifying transform queues (at triggering stage) * Improvements of selectors, utility methods
git-svn-id: https://alcina.googlecode.com/svn/trunk@726 812e3da0-21a7-11df-99f8-b513f4f1e6c6

--- a/framework/gwt/src/cc/alcina/framework/gwt/client/res/Alcina.css
+++ b/framework/gwt/src/cc/alcina/framework/gwt/client/res/Alcina.css
@@ -1385,7 +1385,7 @@ div.max .gwt-RichTextArea{
 .alcina-Selector .popupContent a:hover{
 	background-color:transparent;
 }
-.alcina-Selector .popupContent div.chooser-item:hover{
+.alcina-Selector .popupContent .chooser-item:hover{
 	background-color:#A8D3E6;
 }
 
