Nowrap radiobutton labels
git-svn-id: https://alcina.googlecode.com/svn/trunk@728 812e3da0-21a7-11df-99f8-b513f4f1e6c6

--- a/framework/gwt/src/cc/alcina/framework/gwt/client/res/Alcina.css
+++ b/framework/gwt/src/cc/alcina/framework/gwt/client/res/Alcina.css
@@ -1507,3 +1507,6 @@ div.popdown-select a:hover {
 .gwt-Tree.wrappedContent .gwt-TreeItem{
 	white-space:normal;
 }
+.gwt-RadioButton {
+	white-space:nowrap;
+}
