--- a/framework/gwt/src/cc/alcina/framework/gwt/client/res/Alcina.css
+++ b/framework/gwt/src/cc/alcina/framework/gwt/client/res/Alcina.css
@@ -1507,6 +1507,6 @@ div.popdown-select a:hover {
 .gwt-Tree.wrappedContent .gwt-TreeItem{
 	white-space:normal;
 }
-.gwt-RadioButton {
+.gwt-RadioButton, .gwt-CheckBox {
 	white-space:nowrap;
 }
