--- a/framework/gwt/src/cc/alcina/framework/gwt/client/res/Alcina.css
+++ b/framework/gwt/src/cc/alcina/framework/gwt/client/res/Alcina.css
@@ -655,7 +655,7 @@ div.pad-top-0 {
 	position: relative;
 }
 
-input.wide-text , td.wide-text input{
+input.wide-text,td.wide-text input {
 	width: 450px;
 }
 /** Specific alcina elements (misc) **/
@@ -1226,7 +1226,7 @@ table.gwittir-BoundTable td,table.gwittir-GridForm td {
 	vertical-align: top;
 }
 
-table.gwittir-BoundTable .no-content , .alcina-widgetList .no-content{
+table.gwittir-BoundTable .no-content,.alcina-widgetList .no-content {
 	padding: 15px;
 	text-align: center;
 }
@@ -1695,32 +1695,48 @@ button.alcina-Button.finish {
 	margin-left: 3em;
 }
 /*toolbar button with delegates*/
-.gwt-PopupPanel.toolbar-button-dropdown{
-	padding:5px 5px 0px 5px;
-	border:solid 1px #bbb;
-	background:#f4f4f4;
+.gwt-PopupPanel.toolbar-button-dropdown {
+	padding: 5px 5px 0px 5px;
+	border: solid 1px #bbb;
+	background: #f4f4f4;
 	margin: -5px 0 0 5px;
 }
-.toolbar-button-dropdown td{
-	padding-bottom:5px;
 
-	}
-	
-a.button-grey.pre-drop-down{
-	margin-right:0px;
+.toolbar-button-dropdown td {
+	padding-bottom: 5px;
 }
-a.button-grey.drop-down{
-	padding:3px 5px 7px 5px;
+
+a.button-grey.pre-drop-down {
+	margin-right: 0px;
+}
+
+a.button-grey.drop-down {
+	padding: 3px 5px 7px 5px;
 }
 /*alcina-prompt*/
-div.alcina-prompt{
-	text-align:left;
-	width:350px;
+div.alcina-prompt {
+	text-align: left;
+	width: 350px;
 }
-div.alcina-prompt .sub{
-	margin:1em;
+
+div.alcina-prompt .sub {
+	margin: 1em;
 }
-div.alcina-prompt input{
-	width:300px;
-	margin-left:1em;
+
+div.alcina-prompt input {
+	width: 300px;
+	margin-left: 1em;
+}
+div.gwt-PopupPanel.quiet{
+	border: 2px solid #78A3B6;
+}
+div.gwt-PopupPanel.bubble, div.gwt-PopupPanel {
+	border: 2px solid #78A3B6;
+	position: relative;
+	margin-top: 8px;
+}
+
+div.gwt-PopupPanel.bubble .bubble-up {
+	position: absolute;
+	top: -12px;
 }
